[gd_scene load_steps=4 format=3 uid="uid://dj5r6axdtjkl5"]

[ext_resource type="Script" uid="uid://ckidagfy5j46p" path="res://systems/game_element_system/Peti stuff/play_pile/play_pile.gd" id="1_ewpmr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ewpmr"]
size = Vector3(0.38183594, 0.22375488, 0.64819336)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1yksd"]
albedo_color = Color(1, 0.60333335, 0.14999998, 1)

[node name="PlayPile" type="Area3D"]
script = ExtResource("1_ewpmr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.031799316, 0)
shape = SubResource("BoxShape3D_ewpmr")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.039958417, 0)
size = Vector3(0.5, 0.037, 0.5)
material = SubResource("StandardMaterial3D_1yksd")

[node name="CardVisualPlacePos" type="Marker3D" parent="."]

[connection signal="input_event" from="." to="." method="_on_input_event"]
